# basilisp-kernel

./: .gitignore  API.md  CHANGELOG.md  README.md  basilisp.edn  bb.edn  hatch_build.py  pyproject.toml  test_basilisp.py
.github/workflows/: publish.yml  test.yml
basilisp_kernel/: __init__.py  __main__.py  kernel.py  nrepl_server.lpy
notebooks/: clojure-flow-control.ipynb  pandas-03-select.ipynb  pandas-04-plot.ipynb  python-interop.ipynb
tests/basilisp_kernel/: nrepl_server_test.lpy
tests/basilisp_kernel/integration/: notebook_test.lpy
